main.tf
provider "google" {
  credentials       = "${var.credentials}"
  project           = "${var.project}"
  region            = "${var.region}"
//  billing_account   = "${var.billing_account}"
}

// resource "google_project_services" "main" {
//   project  = "${var.project}"
//   services = [
//     "compute-component.googleapis.com",
//   ]
// }

resource "google_compute_instance" "ovirt-engine-instance" {
  name = "ovirt-engine"

  ## for a setup having multiple instances of the same type, you can do
  ## the following, there would be 2 instances of the same configuration
  ## provisioned
  # count        = 2
  # name         = "${var.instance-name}-${count.index}"
  machine_type = "${var.vm_type["1point7gig"]}"

  zone = "${var.region}"

  tags = [
    "${var.network}-firewall-ssh",
    "${var.network}-firewall-http",
    "${var.network}-firewall-https",
    "${var.network}-firewall-icmp",
    "${var.network}-firewall-postgresql",
    "${var.network}-firewall-openshift-console",
    "${var.network}-firewall-secure-forward",
  ]

  boot_disk {
    initialize_params {
        image = "${var.os["centos7"]}"
    }
  }

  metadata {
    hostname = "engine.ovirt.org"
  }

  network_interface {
    subnetwork = "${google_compute_subnetwork.ovirt_network_subnetwork.name}"

    access_config {
      // Ephemeral IP
    }
  }
}

resource "google_compute_instance" "metrics-store-instance" {
  name = "metrics-store"

  ## for a setup having multiple instances of the same type, you can do
  ## the following, there would be 2 instances of the same configuration
  ## provisioned
  # count        = 2
  # name         = "${var.instance-name}-${count.index}"
  machine_type = "${var.vm_type["7point5gig"]}"

  zone = "${var.region}"

  tags = [
    "${var.network}-firewall-ssh",
    "${var.network}-firewall-http",
    "${var.network}-firewall-https",
    "${var.network}-firewall-icmp",
    "${var.network}-firewall-postgresql",
    "${var.network}-firewall-openshift-console",
    "${var.network}-firewall-secure-forward",
  ]

  boot_disk {
    initialize_params {
        image = "${var.os["centos7"]}"
        size  = 20
    }
  }

  metadata {
    hostname = "metrics.ovirt.org"
  }

  network_interface {
    subnetwork = "${google_compute_subnetwork.ovirt_network_subnetwork.name}"

    access_config {
      // Ephemeral IP
    }
  }
}
